# portable_service_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: api_adapter.hpp  common.hpp  portable_service_core.cpp  portable_service_core.h  portable_service_core.hpp  portable_service_lib.h.in  service_manager.cpp  service_manager.hpp
src/local/: local_adapter.cpp  local_adapter.hpp
src/win_scm/: win_scm.cpp  win_scm.hpp
test/: CMakeLists.txt  general_tests.cpp
